# rag-from-scratch

./: .gitignore  CHUNKING_COMPARISON.md  README.md  benchmark_data.py  chunker.py  compare_chunkers.py  embedder.py  generator.py  inspect_chunk.py  main.py  prompt.py  pyproject.toml  recursive_chunker.py  retriever.py  similarity.py  vector_store.py
data/: 0.txt  1.txt  2.txt
